# gba-rs

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml
gdb/: cmds  hit  setup
reference/: cowbite.html
src/: bit_util.rs  cpu.rs  gba.rs  main.rs  mmu.rs  rom.rs  shared.rs  test.rs
src/cpu/: arm.rs  mem.rs  mod.rs  thumb.rs
src/gba/: mod.rs  save_state.rs
src/io/: dma.rs  key.rs  mod.rs  ppu.rs  timer.rs
src/io/ppu/: mod.rs  render.rs
src/io/ppu/render/: background.rs  combine.rs  mod.rs  mode0.rs  mode1.rs  mode2.rs  mode3.rs  mode345.rs  object.rs  rotscale.rs
src/io/spu/: mod.rs
src/mmu/: bytes.rs  gba.rs  mod.rs  ram.rs  raw.rs
src/mmu/gba/: bios.rs  mod.rs  wait.rs
src/mmu/gba/save/: eeprom.rs  mod.rs
test_roms/first/: Makefile  first.c  first.gba
test_roms/mode4/: Makefile  mode4.c  mode4.gba
test_roms/rsdemo/: readme.txt
test_roms/tonc/code/basic/m3_demo/: Makefile  log.txt  m3_demo.c  m3_demo.gba
test_roms/tonc/code/ext/obj_aff/: obj_aff.d  obj_aff.gba
