[package]
name = "gba-rs"
version = "0.1.0"
authors = ["Sean Purcell <me@seanp.xyz>"]

[dependencies]
arm7tdmi-rs = { git =  "https://github.com/daniel5151/arm7tdmi-rs.git", features = ["serde"] }
arraydeque = "0.4.5"
byteorder = "^1.2.2"
clap = "2"
flame = "0.2.2"
log = "^0.4.1"
env_logger = "^0.5.6"
memmap = "^0.6.2"
sdl2 = "0.31.0"
zstd = "0.4"

serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
serde_json = "1.0"

[profile.release]
debug = true
